--- a/app/package.json
+++ b/app/package.json
@@ -13,10 +13,12 @@
     "@thirdweb-dev/sdk": "^4",
     "ethers": "^5",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
+    "tailwindcss": "^3.3.5",
     "vite": "^3",
     "vite-plugin-node-polyfills": "^0.7.0"
   }
