--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,12 @@
     "ethers": "^5",
     "react": "^18.2",
     "react-dom": "^18.2",
-    "react-router-dom": "^6.18.0"
+    "react-icons": "^4.11.0",
+    "react-particles": "^2.12.2",
+    "react-router-dom": "^6.18.0",
+    "react-tsparticles": "^2.12.2",
+    "react-typed": "^1.2.0",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
