--- a/contract/package.json
+++ b/contract/package.json
@@ -26,6 +26,7 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.0.0",
     "@thirdweb-dev/contracts": "^3.8.0",
     "zksync-web3": "^0.14.3"
   }
