--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^6.18.0",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^1.2.0",
-    "tsparticles": "^2.12.0"
+    "tsparticles": "^2.12.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
