--- a/contract/package.json
+++ b/contract/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.0",
     "@thirdweb-dev/contracts": "^3.8.0",
+    "dotenv": "^16.3.1",
     "zksync-web3": "^0.14.3"
   }
 }
