--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.11.0",
     "react-particles": "^2.12.2",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^1.2.0",
     "tsparticles": "^2.12.0",
